--- a/front-end/src/components/DataCard.css
+++ b/front-end/src/components/DataCard.css
@@ -1,5 +1,22 @@
 .card {
-    width: 25%;
-    box-shadow: 1p 1px 1px black;
-    border: 1px solid black;
+    width: 30%;
+    box-shadow: 3px 2px 4.5px #00000094;
+    height: 250px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 2% 1%;
+    background-color: white;
+}
+.card-metric {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 45px;
+    padding: 5%;
+}
+.card-name {
+    display: flex;
+    justify-content: center;
 }
