pass qualifiers to card components

--- a/front-end/src/components/CardContainer.css
+++ b/front-end/src/components/CardContainer.css
@@ -3,3 +3,10 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+.dry-time-card {
+    width: 49%;
+    padding: 3%;
+}
+.dry-time-card-left {
+    border-right: 1px solid black;
+}
