add basic styling for dry time el

--- a/front-end/src/components/CardContainer.css
+++ b/front-end/src/components/CardContainer.css
@@ -10,3 +10,14 @@
 .dry-time-card-left {
     border-right: 1px solid black;
 }
+.time-to-dry {
+    background-color: white;
+    height: 200px;
+    width: 200px;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    box-shadow: 1px 2px 2px black;
+}
