--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -3,4 +3,18 @@
     color: white;
     padding: 5%;
     height: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  h1 {
+    padding: 0;
+    margin: 0;
+  }
+  .brand {
+    display: flex;
+  }
+  .logo img {
+    height: 200px;
+    width: 200px;
   }
