--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -1,6 +1,20 @@
 .app-header {
-    background-color: blueviolet;
-    color: white;
-    padding: 5%;
-    height: 5%;
-  }
+  background-color: blueviolet;
+  color: white;
+  padding: 5%;
+  height: 5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+h1 {
+  padding: 0;
+  margin: 0;
+}
+.brand {
+  display: flex;
+}
+.logo img {
+  height: 200px;
+  width: 200px;
+}
