--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -13,8 +13,10 @@ h1 {
 }
 .brand {
   display: flex;
+  align-items: center;
 }
 .logo img {
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
+  margin-right: 20px;
 }
