--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap');
+
 .app-header {
   background-color: blueviolet;
   color: white;
@@ -6,8 +8,10 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  font-family: 'Montserrat', sans-serif;
 }
 h1 {
+  font-family: 'Raleway', sans-serif;
   padding: 0;
   margin: 0;
 }
