styling for main cards

--- a/front-end/src/components/EnvironmentMetrics.css
+++ b/front-end/src/components/EnvironmentMetrics.css
@@ -1,7 +1,19 @@
 .environment-card {
-    width: 50%;
+    width: 48%;
+    border: .5px solid #adadad;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: .5%;
+    margin: .5%;
+    box-shadow: 1px 1px 3px black;
 }
-
-.name, .metric {
-    font-size: 20px;
+.name {
+    font-size: 15px;
+}
+.metric {
+    font-size: 30px;
+    font-weight: bold;
 }
