--- a/front-end/src/components/CardContainer.css
+++ b/front-end/src/components/CardContainer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap');
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -5,13 +7,23 @@
 }
 .dry-time-container-outer {
     position: absolute;
+    width: 90%;
     bottom: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .dry-time-card {
     min-height: 84vh;
     width: 49%;
     padding: 3%;
     position: relative;
+}
+.dry-time-card h2 { 
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
 }
 .dry-time-card-left {
     border-right: 1px solid black;
